hw-03/deploymentHPA.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"php-apache","namespace":"default"},"spec":{"replicas":1,"selector":{"matchLabels":{"run":"php-apache"}},"template":{"metadata":{"labels":{"run":"php-apache"}},"spec":{"containers":[{"image":"k8s.gcr.io/hpa-example","name":"php-apache","ports":[{"containerPort":80}],"resources":{"limits":{"cpu":"500m"},"requests":{"cpu":"200m"}}}]}}}}
  creationTimestamp: "2021-11-27T17:15:55Z"
  generation: 6
  name: php-apache
  namespace: default
  resourceVersion: "105228"
  uid: c42b7d32-5e0f-4e84-a134-e4cf4c17ecc5
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      run: php-apache
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: php-apache
    spec:
      containers:
      - image: k8s.gcr.io/hpa-example
        imagePullPolicy: Always
        name: php-apache
        ports:
        - containerPort: 80
          protocol: TCP
        resources:
          limits:
            cpu: 500m
          requests:
            cpu: 200m
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2021-11-27T17:15:55Z"
    lastUpdateTime: "2021-11-27T17:16:41Z"
    message: ReplicaSet "php-apache-d4cf67d68" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: "2021-11-27T17:36:16Z"
    lastUpdateTime: "2021-11-27T17:36:16Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 6
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
