hw-03/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-ingress
spec:
  selector:
    app: nginx-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
