hw-03/serviceHPA.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"run":"php-apache"},"name":"php-apache","namespace":"default"},"spec":{"ports":[{"port":80}],"selector":{"run":"php-apache"}}}
  creationTimestamp: "2021-11-27T17:15:55Z"
  labels:
    run: php-apache
  name: php-apache
  namespace: default
  resourceVersion: "103493"
  uid: d86d6eeb-554e-4a2c-a750-88b1cb382d9e
spec:
  clusterIP: 10.96.82.213
  clusterIPs:
  - 10.96.82.213
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: php-apache
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
